# socialpass

./: .gitignore  .pre-commit-config.yaml  ;  DEPLOY.md  Dockerfile  LICENSE  Makefile  README.md  SELFHOST.md  dependabot.yml  docker-compose.yml  local.yml  manage.py  package.json  pyproject.toml  setup.cfg  todo.md  untitled.md
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.local  Dockerfile.production  DockerfileProd  Makefile  README.md  docker-compose.yml  manage.py  package.json  pyproject.toml  requirements.txt  setup.cfg  webpack.config.js
backend/.envs/: .env.local  .env.production  .env.test  .env.testing  .local  .production
backend/.github/workflows/: ci.yml
backend/apps/: router.py
backend/apps/api/: serializers.py  urls.py  views.py
backend/apps/api_checkout/: README.md  serializers.py  urls.py  views.py
backend/apps/api_checkoutportal/: README.md  serializers.py  services.py  urls.py  views.py
backend/apps/api_eventportal/: serializers.py  urls.py  views.py
backend/apps/api_scanner/: README.md  serializers.py  services.py  urls.py  views.py
backend/apps/api_widget/: serializers.py  urls.py  views.py
backend/apps/checkout/: forms.py  tests.py  (+3 more)
backend/avoid_formview_resubmission/: apps.py  forms.py  views.py
backend/avoid_view_resubmission/: apps.py  data.py  object_tracker.py  views.py
backend/backend/: router.py
backend/config/: NFTYTicketGenerator.py  asgi.py  celery.py  celery_app.py  storages.py  wsgi.py
backend/django/: README.md
backend/templates/: 403.html  404.html  429.html  500.html  robots.txt
(+1679 files in other folders)
